Começando alterações no formulário

--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -26,9 +26,15 @@
             <div class="line">
                 <label>Component Index</label>
                 <input id="component_index" type="text" name="componentIndex">
+
+                <label>Change Field</label>
+                <input id="change_field" type="text" name="changeField">
             </div>
 
             <div class="line">
+                <label>Component Index</label>
+                <input id="component_index" type="text" name="componentIndex">
+
                 <label>Change Field</label>
                 <input id="change_field" type="text" name="changeField">
             </div>
